--- a/styles/main.css
+++ b/styles/main.css
@@ -28,6 +28,15 @@ h4 {
   color: #e8eeff;
 }
 
+.subheader {
+  @apply font-semibold text-center p-5;
+  font-style: normal;
+  font-weight: bold;
+  line-height: 28px;
+  font-size: 24px;
+  color: #e8eeff;
+}
+
 .header {
   @apply font-semibold text-center;
   font-style: normal;
@@ -105,6 +114,35 @@ nav {
   margin-left: 23rem;
 }
 
+.bot-badge {
+  @apply text-xs p-1;
+  border-radius: 2px;
+  background: #7289da;
+}
+
+.at-user {
+  @apply p-2;
+  padding-left: 55px;
+}
+
+.at-user-text {
+  background: #d0d6e9;
+  color: #7289da;
+}
+
+.at-user-text:hover {
+  color: #d0d6e9;
+  background: #7289da;
+}
+
+.bot-badge:hover {
+  background: #46589b;
+}
+
+.bg-gradient {
+  background: linear-gradient(113.28deg, #7289da -2.42%, #4458a0 100%);
+}
+
 .discord-ui {
   background: linear-gradient(116.12deg, #7289da -2.42%, #4458a0 100%);
   /* main shadow */
@@ -141,16 +179,17 @@ nav {
 }
 
 .btn-small:hover {
-  background: #fff;
+  background: #e8eeff;
   color: #7289da;
 }
 
 .btn:hover {
-  background: linear-gradient(306.18deg, #6f7ca7 -93.31%, #1e306c 98.7%);
+  background: #e8eeff;
+  color: #7289da;
 }
 
 .badge {
-  @apply inline-block bg-gray-200 rounded-full px-3 py-1 font-semibold text-gray-700 mr-2 opacity-100;
+  @apply inline-block bg-gray-200 rounded-full px-3 py-1 font-semibold text-gray-700 mr-2 mt-1 opacity-100;
 }
 
 .badge:hover {
