--- a/styles/main.css
+++ b/styles/main.css
@@ -28,6 +28,10 @@ h4 {
   color: #e8eeff;
 }
 
+li {
+  color: #e8eeff;
+}
+
 .subheader {
   @apply font-semibold text-center p-5;
   font-style: normal;
@@ -46,11 +50,20 @@ h4 {
   color: #e8eeff;
 }
 
+.header-xs {
+  @apply font-semibold;
+  font-style: normal;
+  font-weight: bold;
+  line-height: 32px;
+  font-size: 30px;
+  color: #e8eeff;
+}
+
 p {
   @apply font-medium text-left;
-  color: #e8eeff;
   font-size: 18px;
   line-height: 25px;
+  color: #e8eeff;
 }
 
 nav {
@@ -196,23 +209,47 @@ nav {
   @apply opacity-75;
 }
 
+.quick-link-container {
+  box-shadow: 2px 1px 5px rgba(0, 0, 0, 0.5);
+  background: linear-gradient(94.24deg, #4159b1 -2.42%, #4b5fa8 100%);
+  border-radius: 12px;
+}
+
 .quick-link-top {
-  border-top-left-radius: 12px;
+  border-radius: 12px;
   font-size: 36px;
-  border-top-right-radius: 12px;
   background: linear-gradient(133.45deg, #4158ac 3.25%, #869ae2 118.58%);
-  width: 267px;
+  width: 300px;
+  color: #e8eeff;
+}
+
+.quick-link-top:hover {
+  background: #e8eeff;
+  color: #7289da;
 }
 
 .quick-link-bottom {
-  background: linear-gradient(94.24deg, #7289da -2.42%, #4458a0 100%);
+  background: linear-gradient(94.24deg, #4159b1 -2.42%, #4b5fa8 100%);
   border-bottom-left-radius: 12px;
   border-bottom-right-radius: 12px;
-  width: 267px;
+  width: 300px;
+}
+
+.card-container {
+  @apply inline-block text-left;
 }
 
 .light {
   color: #000;
+}
+
+.quick-link-title {
+  @apply leading-none pl-2;
+  @apply font-semibold;
+  font-style: normal;
+  font-weight: bold;
+  line-height: 42px;
+  font-size: 36px;
 }
 
 .quick-link-sub {
@@ -220,8 +257,8 @@ nav {
   font-style: normal;
   font-weight: bold;
   color: #e8eeff;
-  font-size: 12px;
-  line-height: 14px;
+  font-size: 16px;
+  line-height: 20px;
 }
 
 @tailwind utilities;
